--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ body {
     font-weight: 500;
 }
 
-.logo > a {
+.logo a {
     text-decoration: none;
     color: #F9FAF8;
 
@@ -118,13 +118,13 @@ body {
     gap: 24px;
 }
 
-.header-links > a {
+.header-links a {
     text-decoration: none;
     color: #E5E7EB;
 
 }
 
-.header-links > a:hover{
+.header-links a:hover{
     color: #d2daea;
 
 }
